[package]
name = "reality-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "A clean-room Rust implementation of the REALITY server transport for Xray clients."

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
hkdf = "0.12.4"
hmac = "0.12.1"
rcgen = "0.13.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rustls = { version = "0.23.27", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26.2"
uuid = "1.18.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
